added more to the home html page.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>HELLO WORLD!</h1>
   <p>Here is a paragraph. This is a body of text. Testing...</p>
+  <p>JavaScript is not too bad, once you get the hang of promises and asynchronous code.</p>
 </body>
 </html>
